--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.ignoreWords": [
+        "mailtrap",
+        "smtp",
         "tymon"
+    ],
+    "cSpell.words": [
+        "jwtapp"
     ]
 }
